# dingo_dock

./: CMakeLists.txt  README.md
dingo_dock/: CMakeLists.txt  package.xml
dingo_dock/launch/: amcl_complete.launch  gmapping_complete.launch  nav_complete.launch  navigation.launch  rviz.launch  rviz_nav.launch  track_test.launch
dingo_dock/models/platform/: model.sdf
dingo_dock/models/platform/meshes/: platform.dae  platform.stl
dingo_dock/params/: base_local_planner_params.yaml  costmap_common_params.yaml
dingo_dock/params/map_nav_params/: global_costmap_params.yaml  local_costmap_params.yaml
dingo_dock/params/odom_nav_params/: global_costmap_params.yaml  local_costmap_params.yaml
dingo_dock/rviz/: dingo_velodyne.rviz  gmapping.rviz  navigation.rviz
dingo_dock/src/: cloudfilter.cpp  drivetest.cpp  navGoalSender.cpp  nav_goal_sender.cpp
dingo_dock/src/helpers/: dingo_exception.cpp
dingo_dock_sim/: CMakeLists.txt  package.xml
dingo_dock_sim/launch/: description.launch  rviz.launch  simulation.launch  spawn_dingo.launch
dingo_dock_sim/models/platform/: model.config
dingo_dock_sim/rviz/: dingo_velodyne.rviz
dingo_dock_sim/urdf/: accessories.urdf.xacro  dingo-d.urdf.xacro  dingo.urdf.xacro
dingo_dock_sim/urdf/accessories/: vlp16_mount.urdf.xacro
dingo_dock_sim/urdf/configs/: velodyne
dingo_dock_sim/worlds/: platform.world
point_cloud_converter/launch/: point_cloud_converter.launch
pointcloud_to_laserscan/: CMakeLists.txt
pointcloud_to_laserscan/launch/: pointcloud_to_laserscan.launch
rviz/: lidar.rviz
src/: cloudfilter.cpp
